# HTEC

./: CMakeLists.txt  LinkedList.cpp  LinkedList.h  README.md  mytests.cpp
tasks_21/: q2.cpp  q3.cpp  q4.cpp
tasks_24/: q3.cpp
tasks_25/: q2_ptr.cpp  q2_unique_ptr.cpp
tasks_26/: q1.cpp
